[package]
name = "agctl"
version = "0.1.0"
edition = "2024"
description = "Declarative CLI for Amazon Bedrock AgentCore Runtime operations"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
aws-config = "1"
aws-sdk-bedrockagentcorecontrol = "1"
aws-sdk-bedrockagentcore = "1"
dirs = "6"
tabled = "0.18"

[profile.release]
strip = true
lto = true
