[package]
name = "agctl"
version = "0.1.0"
edition = "2024"
description = "Declarative CLI for Amazon Bedrock AgentCore Runtime operations"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
aws-config = "1"
aws-sdk-bedrockagentcorecontrol = "1"
aws-sdk-bedrockagentcore = "1"
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
dirs = "6"
tabled = "0.18"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
http = "1"
crossterm = "0.28"
futures-util = "0.3"
url = "2"
urlencoding = "2"

[profile.release]
strip = true
lto = true
